# dispatcher

./: .gitignore  .~lock.POC.odt#  CMakeLists.txt  Doxyfile  POC.odt  README.md  UML_Diagram.puml
cmake/: Findjsoncpp.cmake
doc/docbook/: Socket_8cpp.xml  Socket_8cpp_source.xml  Socket_8h.xml  Socket_8h_source.xml  annotated.xml  checker__pids_8cpp.xml  checker__pids_8cpp_source.xml  checker__pids_8h.xml  checker__pids_8h_source.xml  classDispatcher.xml  classGetCfgFile.xml  classIpc.xml  classMessageQueue.xml  classSemaphore.xml  classSharedMemory.xml  classSocket.xml  classTuxClient.xml  classall__dispatch__cfg.xml  classchecker__pids.xml  classconnections.xml  classthread__pair.xml  client__main_8cpp.xml  client__main_8cpp_source.xml  common_8h.xml  common_8h_source.xml  connections_8cpp.xml  connections_8cpp_source.xml  connections_8h.xml  connections_8h_source.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dispatch__cfg_8cpp.xml  dispatch__cfg_8cpp_source.xml  dispatch__cfg_8h.xml  dispatch__cfg_8h_source.xml  dispatch__main_8cpp.xml  dispatch__main_8cpp_source.xml  dispatcher_8cpp.xml  dispatcher_8cpp_source.xml  dispatcher_8h.xml  dispatcher_8h_source.xml  (+27 more)
doc/html/: Socket_8cpp.html  Socket_8cpp_source.html  Socket_8h.html  Socket_8h_source.html  annotated.html  checker__pids_8cpp.html  checker__pids_8cpp_source.html  checker__pids_8h.html  checker__pids_8h_source.html  classDispatcher-members.html  classDispatcher.html  classGetCfgFile-members.html  classGetCfgFile.html  classIpc-members.html  classIpc.html  classMessageQueue-members.html  classMessageQueue.html  classSemaphore-members.html  classSemaphore.html  classSharedMemory-members.html  classSocket.html  (+103 more)
src/: Socket.cpp  Socket.h  checker_pids.cpp  checker_pids.h  client_main.cpp  common.h  connections.cpp  connections.h  dispatch_cfg.cpp  dispatch_cfg.h  dispatch_main.cpp  dispatcher.cpp  dispatcher.h  getcfgfile.cpp  getcfgfile.h  ipclib.cpp  ipclib.h  proto_pipe.h  protocol_msg.h  thread_pair.cpp  thread_pair.h  tuxcli_main.cpp
(+247 files in other folders)
